--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>מעקב מחירים - המחיר הטוב ביותר עבורך</title>
@@ -638,4 +639,5 @@
         });
     </script>
 </body>
+
 </html>
