--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>מעקב מחירים - המחיר הטוב ביותר עבורך</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <meta name="description" content="מערכת השוואת מחירים חכמה עם מעקב מתמשך. חפש מוצרים בכל החנויות הגדולות וקבל התראות על מבצעים.">
     <meta name="keywords" content="השוואת מחירים, מעקב מחירים, KSP, Bug, זאפ, אלקטרוניקה, מבצעים">
     
@@ -642,4 +643,5 @@
 </body>
 
 </html>
+
 
