--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <a href="#about">אודות</a>
             <a href="#privacy">פרטיות</a>
             <a href="#contact">צור קשר</a>
-        /*   <a href="https://github.com/rlsite/PriceTracker" target="_blank">GitHub</a>  */
+        //   <a href="https://github.com/rlsite/PriceTracker" target="_blank">GitHub</a>  
         </div>
         <p>&copy; 2025 מעקב מחירים. נעשה באהבה לקונים הישראלים 🇮🇱</p>
     </footer>
@@ -643,6 +643,7 @@
 </body>
 
 </html>
+
 
 
 
